[package]
name = "juke"
version = "0.1.0"
authors = ["dbr <dbr.onix@gmail.com>"]
edition = "2018"

[dependencies]
rspotify = "0.2.5"
failure = "0.1"
rouille = "3"
rand = "0.6"
serde = "*"
serde_json = "*"
serde_derive = "*"
log = "0"
env_logger = "0"
ctrlc = "3.0"

[dev-dependencies]
reqwest = "0.9.5"
