[package]
authors = ["dbr <dbr.onix@gmail.com>"]
edition = "2018"
name = "juke"
version = "0.1.0"
[dependencies]
ctrlc = "3.1"
env_logger = "0"
failure = "0.1"
librespot = "*"
log = "0"
rand = "0.6.4"
rouille = "3"
rspotify = "0.4"
serde = "*"
serde_derive = "*"
serde_json = "*"
tokio-core = "*"

[dev-dependencies]
reqwest = "0.9.5"

[patch]
[patch.crates-io]
[patch.crates-io.rouille]
branch = "wscpu"
git = "https://github.com/dbr/rouille"
